# edgarstream

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  railway.toml  render.yaml  start.py  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/drift/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/feed/: page.tsx
frontend/components/: AnimatedDemo.tsx  DriftTable.tsx  FilingBadge.tsx  FilingsTable.tsx  FinancialCard.tsx  LiveBadge.tsx  MetricCard.tsx  Navbar.tsx  VolumeChart.tsx
frontend/lib/: api.ts  types.ts  utils.ts
infra/prometheus/: prometheus.yml
services/api/: main.py
services/listener/: rss_poller.py
services/monitor/: schema_drift.py
services/parser/: form_10k.py  form_10q.py  form_13f.py  form_8k.py  form_s1.py
services/warehouse/: snowflake_sync.py
services/workers/: pipeline_worker.py  prefect_flow.py
shared/: metrics.py
shared/models/: databases.py  filing.py
shared/utils/: db.py
tests/: conftest.py  test_api.py  test_dataset.py  test_form_13f.py  test_form_8k.py  test_form_s1.py  test_golden_files.py  test_idempotency.py  test_parser_10k.py  test_parser_13f.py  test_parser_heuristics.py
tests/fixtures/: 13f_index.html  13f_table.xml  8k_bankruptcy.html  8k_exec_change.html  8k_index.html  s1_document.html  s1_index.html
(+2 files in other folders)
