[project]
name = "edgarstream"
version = "0.1.0"
description = "Real-time SEC filings pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.4",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "prefect>=3.0.0",
    "mangum>=0.17.0",
    "arelle-release>=2.7.0",
    "pandas>=2.2.0",
    "snowflake-connector-python>=3.10.0",
    "snowflake-connector-python[pandas]>=3.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infra*", "shared*", "services*"]